Fixed weirdness on Linux where checked icon for radio menu items are overlapping color labels

--- a/src/chrome/skin/all/clippingLabelPalette.css
+++ b/src/chrome/skin/all/clippingLabelPalette.css
@@ -23,128 +23,20 @@
  * ***** END LICENSE BLOCK ***** */
 
 
-/*
- * Clipping label popup submenu
- * The *-cxt-* styles are used by Clippings Manager, where the label palette
- * appears in two places.
- * The *-2 styles are used by the alternative label picker menu, used in Linux
- * due to issue #50.
- */
-#clipping-label-menupopup menuitem,
-#clipping-label-cxt-menupopup menuitem,
-#clipping-label-menupopup-2 menuitem,
-#clipping-label-cxt-menupopup-2 menuitem {
-  list-style-image: url("chrome://clippings/skin/images/clipping-labels.png");
-}
-
-#clipping-label-menupopup menuitem,
-#clipping-label-cxt-menupopup menuitem {
-  max-width: 24px;
-}
-
-#clipping-label-menupopup-2 .menuitem-iconic > 
-  .menu-iconic-left > .menu-iconic-icon,
-#clipping-label-cxt-menupopup-2 .menuitem-iconic >
-  .menu-iconic-left > .menu-iconic-icon {
-  width: auto;
-  height: auto;
-}
-
-/* Some hacking to force the popup submenu to look like a palette widget. */
-#clipping-label-menugroup-row-1,
-#clipping-label-menugroup-row-2,
-#clipping-label-cxt-menugroup-row-1,
-#clipping-label-cxt-menugroup-row-2 {
-  background-color: menu;
-}
-
-#clipping-label-menugroup-row-1 .menuitem-iconic,
-#clipping-label-menugroup-row-2 .menuitem-iconic,
-#clipping-label-cxt-menugroup-row-1 .menuitem-iconic,
-#clipping-label-cxt-menugroup-row-2 .menuitem-iconic {
-  -moz-box-flex: 1;
-  -moz-box-pack: center;
-  -moz-box-align: center;
-}
-
-#clipping-label-menugroup-row-1 menuitem,
-#clipping-label-menugroup-row-2 menuitem,
-#clipping-label-cxt-menugroup-row-1 menuitem,
-#clipping-label-cxt-menugroup-row-2 menuitem {
-  padding-left:  4px !important;
-  padding-right: 2px !important;
-  padding-top:   1px !important;
-}
-
-#clipping-label-menugroup-row-1 .menuitem-iconic > 
-  .menu-iconic-left > .menu-iconic-icon,
-#clipping-label-menugroup-row-2 .menuitem-iconic > 
-  .menu-iconic-left > .menu-iconic-icon,
-#clipping-label-cxt-menugroup-row-1 .menuitem-iconic > 
-  .menu-iconic-left > .menu-iconic-icon,
-#clipping-label-cxt-menugroup-row-2 .menuitem-iconic > 
-  .menu-iconic-left > .menu-iconic-icon {
-  width: auto;
-  height: auto;
-}
-
-#clipping-label-menugroup-row-1 .menuitem-iconic > .menu-iconic-text,
-#clipping-label-menugroup-row-2 .menuitem-iconic > .menu-iconic-text,
-#clipping-label-cxt-menugroup-row-1 .menuitem-iconic > .menu-iconic-text,
-#clipping-label-cxt-menugroup-row-2 .menuitem-iconic > .menu-iconic-text {
-  display: none;
-}
-
-#clipping-label-menugroup-row-1 .menuitem-iconic > .menu-accel-container,
-#clipping-label-menugroup-row-2 .menuitem-iconic > .menu-accel-container,
-#clipping-label-cxt-menugroup-row-1 .menuitem-iconic > .menu-accel-container,
-#clipping-label-cxt-menugroup-row-2 .menuitem-iconic > .menu-accel-container {
-  display: none;
-}
-
-/* Styles for individual color chips. */
-.clipping-label-none {
-  -moz-image-region: rect(0px, 22px, 22px, 0px);
-}
-
-.clipping-label-none[selected="true"] {
-  -moz-image-region: rect(22px, 22px, 44px, 0px);
-}
-
 .clipping-label-red {
-  -moz-image-region: rect(0px, 44px, 22px, 22px);
   color: red;
 }
 
-.clipping-label-red[selected="true"] {
-  -moz-image-region: rect(22px, 44px, 44px, 22px);
-}
-
 .clipping-label-orange {
-  -moz-image-region: rect(0px, 66px, 22px, 44px);
   color: orange;
 }
 
-.clipping-label-orange[selected="true"] {
-  -moz-image-region: rect(22px, 66px, 44px, 44px);
-}
-
 .clipping-label-yellow {
-  -moz-image-region: rect(0px, 88px, 22px, 66px);
   color: rgb(200, 200, 0);
 }
 
-.clipping-label-yellow[selected="true"] {
-  -moz-image-region: rect(22px, 88px, 44px, 66px);
-}
-
 .clipping-label-green {
-  -moz-image-region: rect(0px, 110px, 22px, 88px);
   color: green;
-}
-
-.clipping-label-green[selected="true"] {
-  -moz-image-region: rect(22px, 110px, 44px, 88px);
 }
 
 .clipping-label-blue {
@@ -152,25 +44,11 @@
   color: blue;
 }
 
-.clipping-label-blue[selected="true"] {
-  -moz-image-region: rect(22px, 132px, 44px, 110px);
-}
-
 .clipping-label-purple {
-  -moz-image-region: rect(0px, 154px, 22px, 132px);
   color: purple;
 }
 
-.clipping-label-purple[selected="true"] {
-  -moz-image-region: rect(22px, 154px, 44px, 132px);
-}
-
 .clipping-label-grey {
-  -moz-image-region: rect(0px, 176px, 22px, 154px);
   color: gray;
-}
-
-.clipping-label-grey[selected="true"] {
-  -moz-image-region: rect(22px, 176px, 44px, 154px);
 }
 
